--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-requests>=2.31.0
+aiofiles>=23.1.0
 google-cloud-texttospeech>=2.14.0
 google-auth>=2.17.0
 discord.py==2.0.0
@@ -6,3 +6,4 @@ discord.py[voice]>=2.0.0
 pandas>=2.2.3
 python-dotenv>=1.0.0
 PyNaCl>=1.5.0
+requests>=2.31.0
