--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 aiofiles>=23.1.0
 google-cloud-texttospeech>=2.14.0
 google-auth>=2.17.0
-discord.py==2.0.0
-discord.py[voice]>=2.0.0
+discord.py>=2.4.0
+discord.py[voice]>=2.4.0
 pandas>=2.2.3
 python-dotenv>=1.0.0
 PyNaCl>=1.5.0
